migration-assessment/kubernetes/network-aks/99-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: petclinic
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
